palindrome second commit/update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-  <div id="generalContainer"></div>
+  <div id="generalContainer">
+    <h1 class="title">Palindrome Detector</h1>
+    <div class="content">
+  <div class="inputBox">
+    <input type="text" id="inputSpace" placeholder="input wordsace">
+    <input type="button" value="CHECK" id="checkBtn" class="checkBtn">
+  </div>
+  <div class="feedbackBox">
+    <!-- <p class="palindromeText"></p> -->
+    <p class="responseBox"></p>
+  </div>
+</div>
+  </div>
   <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
